fix: mobile navbar overlapping menu toggle

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,7 @@ $mobileDeviceCutoff: 992px;
 @media (max-width: $mobileDeviceCutoff) {
   .navbar-collapse {
     position: fixed;
-    top: 50px;
+    top: 56px;
     left: 0;
     padding-left: 15px;
     padding-right: 15px;
